[20221027] refactored visualization code

--- a/EDA/NeurIPS-TS-UNI.ipynb
+++ b/EDA/NeurIPS-TS-UNI.ipynb
@@ -139,17 +139,6 @@
    "execution_count": 8,
    "id": "aa829e1b",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "F = 0\n",
-    "dataset = \"NeurIPS-TS\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "97f1fd59",
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -177,37 +166,10 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(20, 6))\n",
-    "plt.plot(train_X[:,F])\n",
-    "plt.title(f\"{dataset} train data, feature {F}\")\n",
-    "plt.show()\n",
-    "\n",
-    "plt.figure(figsize=(20, 6))\n",
-    "\n",
-    "plt.plot(test_X[:,F])\n",
-    "plt.title(f\"{dataset} test data, feature {F}\")\n",
-    "s, e = None, None\n",
-    "for i in range(len(test_X)):\n",
-    "    if test_y[i] == 1 and s is None:\n",
-    "        s = i\n",
-    "    elif test_y[i] == 0 and s is not None:\n",
-    "        e = i-1\n",
-    "        if (e-s) > 0:\n",
-    "            plt.axvspan(s, e, facecolor='red', alpha=0.5)\n",
-    "        else:\n",
-    "            plt.plot(s, test_X[s], 'ro')\n",
-    "        s, e = None, None\n",
-    "\n",
-    "plt.show()"
+    "F = 0\n",
+    "dataset = \"NeurIPS-TS\"\n",
+    "datafactory.visualize_dataset(train_X, train_y, test_X, test_y, dataset_name=dataset, feature_idx=F)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea550671",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
